[package]
name = "hmc5983"
version = "0.1.2"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"
description = "HMC5983 magnetometer driver for embedded hal"
license = "BSD-3-Clause"
repository = "https://github.com/tstellanova/hmc5983"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "embedded-hal-driver",
    "HMC5983",
    "HMC5883",
    "magnetometer"
]
readme = "README.md"

[dependencies]
embedded-hal = { version = "0.2.3", features = ["unproven"] }

