[package]
name = "hmc5983-async"
version = "0.1.3"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"
description = "HMC5983 magnetometer driver for embedded hal"
license = "BSD-3-Clause"
repository = "https://github.com/tstellanova/hmc5983"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "embedded-hal-driver",
    "HMC5983",
    "HMC5883",
    "magnetometer"
]
readme = "README.md"

[dependencies]
defmt = "0.3.2"
embedded-hal = { version = "0.2.3", features = ["unproven"] }
embedded-hal-async = "0.1.0-alpha.1"
panic-rtt-core = {version="0.1.0", optional=true}

[features]
default = []
rttdebug = ["panic-rtt-core"]

